--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "buffer-to-uint8array": "^1.1.0",
     "json-stable-stringify": "^1.0.1",
+    "shardus-sphincs": "github:ULCProject/shardus-sphincs",
     "sodium": "^2.0.3",
     "sphincs": "^2.2.1"
   }
